<resources>
    <string name="app_name">PortfolioApp</string>

    <string name="portfolio_app">My portfolio app!</string>
    <string name="action_settings">Settings</string>
    <string name="spofity_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build it Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="capstone_my_own_app">Capstone: My Own App</string>
</resources>
