<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@color/activity_background" >

    <TextView
        android:text="@string/portfolio_app"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <Button
        android:id="@+id/spotifyStreamer"
        android:layout_width="match_parent"
        android:layout_marginTop="12dp"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_background"
        android:gravity="center"
        android:text="@string/spofity_streamer"/>

    <Button
        android:id="@+id/scoresApp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_background"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/scores_app"/>

    <Button
        android:id="@+id/libraryApp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_background"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/library_app"/>

    <Button
        android:id="@+id/buildItBigger"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_background"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/build_it_bigger"/>

    <Button
        android:id="@+id/XYZReader"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/button_background"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/xyz_reader"/>

    <Button
        android:id="@+id/capstoneApp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_button_min_height_material"
        android:background="@color/capstone_button_background"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/capstone_my_own_app"/>


</LinearLayout>
    </ScrollView>
